SFDC_LD_Packages/objects-layouts/main/default/objects/Top_X_Account_Snapshot__c/Top_X_Account_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Snapshot object for &quot;Top X Account&quot; report. Tracks the periodic data pertaining to top X Accounts</description>
    <label>Top X Account Snapshot</label>
    <nameField>
        <displayFormat>TPXAS-{000000}</displayFormat>
        <label>Top X Account Snapshot</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Top X Account Snapshot</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>