SFDC_LD_Packages/objects-layouts/main/default/objects/Top_X_Account_Snapshot__c/fields/Account_Source__c.field-meta.xml
<CustomField>
    <fullName>Account_Source__c</fullName>
    <label>Account Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>