SFDC_LD_Packages/objects-layouts/main/default/objects/Top_X_Account_Snapshot__c/fields/HQ_StateProvince__c.field-meta.xml
<CustomField>
    <fullName>HQ_StateProvince__c</fullName>
    <label>HQ State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>