SFDC_LD_Packages/objects-layouts/main/default/objects/Top_X_Account_Snapshot__c/fields/Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity__c</fullName>
    <label>Last Activity</label>
    <type>DateTime</type>
</CustomField>