SFDC_LD_Packages/objects-layouts/main/default/objects/Top_X_Account_Snapshot__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <label>Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>