SFDC_LD_Packages/objects-layouts/main/default/objects/Top_X_Account_Snapshot__c/fields/Top_X_Account__c.field-meta.xml
<CustomField>
    <fullName>Top_X_Account__c</fullName>
    <label>Top X Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>