SFDC_LD_Packages/objects-layouts/main/default/objects/Top_X_Account_Snapshot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Id__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Account_Owner__c</columns>
    <columns>Account_Owner_Role__c</columns>
    <columns>Account_Source__c</columns>
    <columns>HQ_StateProvince__c</columns>
    <columns>Type__c</columns>
    <columns>Rating__c</columns>
    <columns>Last_Modified_Date__c</columns>
    <columns>Last_Activity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>